--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Buscador de Personajes</title>
   </head>
-  <body>
+  <body class="bg-emerald-600 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
