--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buscador de Personajes</title>
   </head>
-  <body class="bg-emerald-600 text-white">
+  <body class="bg-purple-900 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
